--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     margin-left: 13%;
     margin-right: 14%;
     background-color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;    
 }
 
 .img-div{
@@ -42,10 +42,9 @@ img{
 }
 
 .content-div{
-    /* padding-left:3rem;
-    padding-right: 5rem; */
     position: relative;
     width: -webkit-fill-available;
+    color: #02423d;
 }
 
 p{
@@ -57,7 +56,7 @@ p{
 
 .content-one{
     height:35%;
-    background-color: aliceblue;
+    background-color: #E5E7EB;
     display: flex;
     flex-direction: column;
     position: relative;
@@ -67,11 +66,13 @@ p{
     position: absolute;
     bottom: 0;
     width: 100%;
+    padding-bottom: 2rem;
 }
 
 .content-two{
     display: flex;
     flex-direction: column;
+    box-shadow: 0px 5px 10px 0px #E5E7EB;
     
 }
 
@@ -89,7 +90,7 @@ p{
 
 label{
     font-size: x-small;
-    padding-bottom: 0.1rem;
+    padding-bottom: 0.3rem;
     font-weight: 600;
 }
 
@@ -97,6 +98,7 @@ input{
     width: 14rem;
     height: 1.5rem;
     border-radius: 5px;
+    border: 1px solid #E5E7EB;
 }
 
 .content-three{
@@ -118,4 +120,36 @@ button{
     padding-bottom: 0.5rem;
     border: 0px;
     box-shadow: 5px 5px 2px 1px rgba(0, 0, 0, 0.05);
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.row-three{
+    padding-bottom:3rem;
+}
+
+.signup{
+    padding-left: 0rem;
+    font-size: 1rem;
+}
+
+a{
+    color: #596D48;
+    text-decoration: none;
+}
+
+input:focusin{
+    border: 1px solid blue;
+    box-shadow: 5px 5px 2px 1px rgba(0, 0, 0, 0.05);
+}
+
+input:invalid{
+    border: 1px solid red;
+}
+
+#password-alert{
+    color: red;
+    font-size: 0.7rem;
+    padding-top: 0.3rem;
+    font-weight: 100;
 }
