--- a/style.css
+++ b/style.css
@@ -7,13 +7,19 @@
 
 }
 
+html, body, .container{
+    height: 100%;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 body{
     background-color:rgba(24,37,2,0.9);
 }
 
 
 .container{
-    height: 950px;
+    /* height: 950px; */
     width: 1350px;
     display: flex;
     margin-left: 13%;
@@ -27,6 +33,8 @@ body{
     background-size: cover;
     width: max-content;
     height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .logo-text{
@@ -52,9 +60,29 @@ img{
     width: 5rem;
 }
 
+.img-ref{
+    color: white;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    margin-top: 100%;
+    padding-top: 15%;
+    margin-bottom: 0%;
+    font-size: 6rem;
+}
+
+.img-ref label{
+    font-size: small;
+}
+
+.img-ref a{
+    color: white;  
+    text-decoration: underline;
+}
+
 .content-div{
     position: relative;
-    width: -webkit-fill-available;
+    width: inherit;
     color: #02423d;
 }
 
